--- a/style.css
+++ b/style.css
@@ -5,3 +5,32 @@
         color: white;
         
 }
+.heading > h1{
+    background-color: rgb(78, 72, 72);
+    text-align: center;
+ 
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
