--- a/style.css
+++ b/style.css
@@ -30,7 +30,16 @@ height: 620px;
   
     align-content: space-around;
 }
+h2{
+    /* margin: 50px 20px; */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(124, 50, 199);
+    margin-right: 500px;
+    background-color:rgba(255, 255, 255, 0);
+    border-radius: 10px;
+    padding: 10px;
 
+}
 
 
 
