--- a/style.css
+++ b/style.css
@@ -52,7 +52,12 @@ p{
     border-radius: 10px;
 }
 
-
+@media only screen and (max-width: 400px) {
+    
+    .img>img{
+        width: 350px;
+        height: 200px;
+    }
 
 
 
