--- a/style.css
+++ b/style.css
@@ -82,7 +82,21 @@ p{
     
     }
 
-
+  p{
+        margin-left: 5px;
+        margin-right: 5px;
+        padding: 10px;
+        display: flex;
+        text-align: center;
+        text-decoration:underline ;
+        width: 160px;
+        font-size: 25px;
+        color: black;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        background-color:cornsilk;
+        border-radius: 10px;
+}
+}
 
 
 
